--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Nayana Arya Foundation - Creating vision for visually impaired children. An NGO dedicated to education, technology training, and community support. Donate, volunteer, and make a difference in Bengaluru, India.">
     <meta name="keywords" content="NGO, blind children education, visual impairment, children's charity, volunteer opportunities, donate India, Bengaluru, social impact">
     <meta name="author" content="Nayana Arya Foundation">
-    <meta name="theme-color" content="#0c4a6e">
+    <meta name="theme-color" content="#dc2626">
     
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
@@ -28,41 +28,42 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              'ocean-blue': {
-                '50': '#f0f9ff',
-                '100': '#e0f2fe',
-                '200': '#bae6fd',
-                '300': '#7dd3fc',
-                '400': '#38bdf8',
-                '500': '#0ea5e9',
-                '600': '#0284c7',
-                '700': '#0369a1',
-                '800': '#075985',
-                '900': '#0c4a6e',
-                '950': '#082f49',
+              'primary-red': {
+                '50': '#fef2f2',
+                '100': '#fee2e2',
+                '200': '#fecaca',
+                '300': '#fca5a5',
+                '400': '#f87171',
+                '500': '#ef4444',
+                '600': '#dc2626',
+                '700': '#b91c1c',
+                '800': '#991b1b',
+                '900': '#7f1d1d',
+                '950': '#431407',
               },
-              'warm-amber': {
-                '50': '#fffbeb',
-                '100': '#fef3c7',
-                '200': '#fde68a',
-                '300': '#fcd34d',
-                '400': '#fbbf24',
-                '500': '#f59e0b',
-                '600': '#d97706',
-                '700': '#b45309',
-                '800': '#92400e',
-                '900': '#78350f',
-                '950': '#451a03',
+              'neutral': {
+                '50': '#fafafa',
+                '100': '#f5f5f5',
+                '200': '#e5e5e5',
+                '300': '#d4d4d4',
+                '400': '#a3a3a3',
+                '500': '#737373',
+                '600': '#525252',
+                '700': '#404040',
+                '800': '#262626',
+                '900': '#171717',
+                '950': '#0a0a0a',
               }
             },
             fontFamily: {
-              sans: ['Inter', 'sans-serif'],
+              sans: ['Poppins', 'sans-serif'],
+              heading: ['Poppins', 'sans-serif'],
             },
           }
         }
